$Id$

2004.06.02 [Olivier]
  * add some properties for the GnomeCanvasText item, introduce a
    GnoCanvas.text class with getters for text height and width
  * relax type constraint in GUtil.memo so that it can work for
    non-widget gobjects

2004.06.01 [Olivier]
  * export a couple of properties in GButton.button_skel

2004.05.09 [Olivier]
  * extended toolbar API (2.4)
  * update GtkAction* widgets to the final API

2004.04.04 [Olivier]
  * re-implement Gobject.Data.caml (correctly this time)

2004.03.26 [Olivier]
  * Add a common supertype for canvas items: GnoCanvas.base_item.
  * Improve the signatures of canvas, group and item classes in
    GnoCanvas (no more low-level Gtk.obj)

2004.03.23 [Olivier]
  * generic handling of GError on the C side
  * added exception Glib.Convert.Error

In lablgtk2-20040319:

2004.03.18 [Jacques]
  * move GTree.tree to GBroken.tree (really broken in 2.4?)
  * add GBroken.text
  * add GContainer#all_children
  * add GUtil.print_widget

2004.03.17 [Olivier]
  * add GFile.filter#add_custom
  * add special methods for adding open/save button in 
    GWindow.file_chooser_dialog

2004.03.15 [Jacques]
  * allow destroying pixmaps manually
  * update GdkPixbuf support
  * PangoLayout corrections (incompatible with previous snapshot)

2004.03.10 [Olivier]
  * update several 2.4 widgets to the latest API (ComboBox, TreeView,
    FileChooser).
  * add a convenience function GTree.store_of_list
  * change the type of #iter_n_children and #iter_children in GTree.model

2004.03.05 [Olivier]
  * gtk_dialog->action_area is a GtkHButtonBox
  * add gtk_button_box_{set,get}_child_secondary (2.4)
  * misc. additions and cleanups in GPack.box and GPack.button_box

In lablgtk2-20040304:

2004.03.04 [Jacques]
  * fix dependencies in src/Makefile
  * fix #layout in GDraw.{drawable,pixmap}
  * fix typing problems in 3.06 and 3.07+14

2004.03.01 [Jacques]
  * add Pango.Layout and GDraw.drawable#layout

2004.02.29 [Olivier]